@@ -1,12 +1,14 @@
-/* eslint-env node */
-
-// tutti i percorsi sono relativi alla dir di lavoro
 export const defaults = {
 
-  // immagine sorgent. SVG o PNG 512x512
+  // delimitazione porzione da copiare nel file init
+  /*** INIT START ***/
+
+  // tutti i percorsi sono relativi alla dir di lavoro
+
+  // immagine sorgente SVG o PNG 512x512
   src_img: 'favicon-src.svg',
 
-  // sorgente opzionale per immagine piccole (32px)
+  // sorgente opzionale per immagini piccole (32px)
   small_src_img: null,
 
   // linguaggio da utilizzare per lo snippet html
@@ -16,14 +18,14 @@ export const defaults = {
   // nome del file snippet senza estensione
   snippet_name: 'favicon',
 
-  // path dei file favkicon da utilizzare nello snippet
+  // path dei file favicon da utilizzare nello snippet
   publicPath: '/',
 
   // se true aggiunge allo snippet una query string per ovviare ad eventuali
   // problemi di caching del browser
   add_cache_buster: false,
 
-  // directory output (percorso relatuvo alla dir di lavoro)
+  // directory output (percorso relativo alla dir di lavoro)
   output_dir: 'favicons-output',
 
   // chiavi aggiuntive per webmanifest, normalmente non necessarie per il browser
@@ -37,5 +39,7 @@ export const defaults = {
   //   display: "fullscreen"
   // }
   webmanifest_extra: null
+
+  /*** INIT END ***/
 
 };
