@@ -35,3 +35,4 @@
 2023-04-10T10:46:17.376Z |           1.12.5 | update-version fix
 2023-05-27T17:50:06.523Z |           1.13.0 | create-favicons
 2023-05-27T17:53:56.680Z |           1.13.1 | fix
+2023-05-29T10:15:31.419Z |           1.14.0 | create-favicon: init option
